<resources>
    <string name="app_name">AndroidTaskTimer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title_add_task">Add Task</string>
    <string name="menu_title_show_durations">Durations Report</string>
    <string name="menu_title_show_about">About</string>
    <string name="menu_title_generate">Generate Data</string>
    <string name="btn_description">Edit Task</string>
    <string name="btn_delete_description">Delete a task</string>
    <string name="btn_title_submit">Save</string>
    <string name="et_task_name_hint">Type in a task name (required)</string>
    <string name="et_task_description_hint">Enter a task description (required)</string>
    <string name="et_task_sort_order_hint">Enter the task\'s sort order (optional)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_current_name_empty">No Task Selected</string>
</resources>
