<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.tmosest.androidtasktimer.MainActivity">
    <item android:id="@+id/menu_settings"
          android:title="@string/action_settings"
          android:orderInCategory="30"
          app:showAsAction="never"/>
    <item android:title="@string/menu_title_add_task" android:id="@+id/menu_add_task"
          android:icon="@android:drawable/ic_menu_add" app:showAsAction="ifRoom" android:orderInCategory="10"/>
    <item android:title="@string/menu_title_show_durations" android:id="@+id/menu_show_duration"
          app:showAsAction="ifRoom" android:icon="@android:drawable/ic_menu_view" android:orderInCategory="20"/>
    <item android:title="@string/menu_title_show_about" android:id="@+id/menu_show_about"
          android:icon="@android:drawable/ic_menu_info_details" app:showAsAction="ifRoom" android:orderInCategory="40"/>
    <item android:title="@string/menu_title_generate" android:id="@+id/menu_generate" android:orderInCategory="50"
          android:visible="false"/>
</menu>
