<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <EditText android:layout_width="0dp" android:layout_height="wrap_content" android:id="@+id/et_task_name"
              app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
              android:singleLine="false" android:hint="@string/et_task_name_hint" android:maxLength="64"
              android:inputType="textNoSuggestions"/>
    <EditText android:layout_width="0dp" android:layout_height="wrap_content"
              android:id="@+id/et_edit_description"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/et_task_name" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:singleLine="false"
              android:hint="@string/et_task_description_hint" android:maxLength="256"
              android:inputType="textNoSuggestions"/>
    <EditText android:layout_width="0dp" android:layout_height="wrap_content" android:id="@+id/et_sort_order"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toBottomOf="@+id/et_edit_description" app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp" android:singleLine="true"
              android:hint="@string/et_task_sort_order_hint" android:maxLength="9" android:inputType="number"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_add_edit_task"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_sort_order"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:text="@string/btn_title_submit"
            android:drawableStart="@android:drawable/ic_menu_save"/>
</android.support.constraint.ConstraintLayout>
